--- a/packages/common/src/components/Select/select.css
+++ b/packages/common/src/components/Select/select.css
@@ -6,3 +6,9 @@
 .select-option {
     text-transform: capitalize;
 }
+
+@media screen and (max-width: 1100px) {
+    .select-space {
+        width: 100%;
+    }
+}
