--- a/packages/ecommerce/src/App.css
+++ b/packages/ecommerce/src/App.css
@@ -50,28 +50,39 @@
   padding: 2rem;
 }
 
+.page-filter{
+  display: flex;
+  justify-content: space-evenly;
+}
+
 .card-list {
   list-style: none;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-gap: 2rem;
-  align-content: center;
+  justify-items: center;
   padding: 0px;
 }
 
-@media screen and (max-width: 992px) {
+@media screen and (max-width: 1200px) {
   .card-list {
     grid-template-columns: repeat(3, 1fr);
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1100px) {
+  .page-filter {
+      flex-direction: column;
+  }
+}
+
+@media screen and (max-width: 900px) {
   .card-list {
     grid-template-columns: repeat(2, 1fr);
   }
 }
 
-@media screen and (max-width: 550px) {
+@media screen and (max-width: 585px) {
   .card-list {
     grid-template-columns: repeat(1, 1fr);
   }
