--- a/packages/common/src/App.css
+++ b/packages/common/src/App.css
@@ -12,8 +12,8 @@
   --clr-main: #054aca;
   --clr-border: #0984e3;
   --clr-white: #f5f5f5;
-  --clr-white-basic: #ffffff;
-  --clr-error: #e84118;
+  --clr-inactive: #eee;
+  --clr-border: #101010;
   --clr-orange: #fcae1e;
   /* ------------font size------------ */
   --font-title: 2rem;
